# math-ai-lab

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
concepts/bayes-rule/problems/: art-competition.ipynb  cat-allergy.ipynb  cloudy-morning-picnic.ipynb  factory-quality-assessment.ipynb  glass-purchase.ipynb
concepts/conditional-probability/problems/: company-application.ipynb
concepts/markov-processes/problems/: nadal-vs-federer-deuce.ipynb
concepts/monte-carlo/problems/: estimate-pi.ipynb
concepts/probability/problems/: ab-test-sample-size.ipynb  api-latency-sla.ipynb  customer-wait-time.ipynb  exam-scores.ipynb  factory-defects.ipynb  investment-risk.ipynb  llm-token-sampling.ipynb  weight-initialization.ipynb
concepts/probability/theory/: random-variables-pmf-pdf-cdf.ipynb
src/probmodels/: __init__.py  bayes.py  simulation.py
